# bird_hordes

./: Cargo.toml  README.md
assets/: air.debug.gltf  bullet.gltf  cube.glb  cube.gltf  hill.corner.gltf  hill.corner.inner.gltf  hill.gltf  nest.gltf  pengu.gltf  plane.gltf  slope.corner.gltf  slope.corner.inner.gltf  slope.gltf  slope.inward.gltf  slope.outward.gltf  solid.debug.gltf  tile.gltf  tileset copy.json  tileset.blend  tileset.blend1  tileset2.blend  tileset2.blend1  tower.gltf
assets/.treasury/: 0115fcef-c92c-431a-abc6-d4522c95e15a  08c18bf6-56ed-4cf0-9618-e51ad2093b07  0cf76cc1-93f1-47d0-8687-45868725c4fa  122cfafc-afe6-429b-a008-fb874be94981  18d6f877-88e8-46f9-b65d-ae23a4b70588  1c9762a5-26ff-40b9-a47e-b9c5621a771a  23820310-d229-41db-a2f6-91770f9fa217  26497d55-ae2d-4d25-b4bd-aced1371479e  399dead8-ff4d-4060-b7bf-be1c5cd4c31b  3abe12da-5210-49a0-b64a-1bb71a52470a  42f9feac-d11a-4b2f-9c0b-358166237958  48b510ad-bd44-4e64-859b-9b74f4faf6d9  582c6946-8f57-497d-a1e8-fbe1010deefa  5a3ef641-bf17-4628-ad6a-8afe7f4f6f16  618fb5ed-79d7-400f-bae0-65a846207cee  688ab66a-b154-44db-a361-b26056fcc100  69df487b-6fea-4fec-8bc4-8e91eb7b1a93  7c60d2ed-9073-471e-b44c-6556589e5ef6  7e27bb93-7465-41c5-90c1-88240d8ea49b  80c01196-3c02-4590-bf94-49b6fdd0d3a1  95aeb4aa-ea55-4961-94fd-2895caa5e1fe  99399106-c114-4a05-804d-fa93ebfd1ec7  9a26039b-9941-4728-9ff8-7ed33b9f51a6  9fb4ce52-c8cc-48a7-ac46-39867c2d4f7a  a1f2909f-4f44-42dd-b670-83fb9c079c47  a7040263-199b-4248-9186-c559a89ddd07  adf8c558-7f77-4ffe-ba31-6948e7e77f20  (+16 more)
bird_hordes_Data/: app.info
src/: light.rs  light.wgsl  main.rs  main.wgsl  renderer.rs
terragen/: Cargo.toml
terragen/src/: lib.rs
(+34 files in other folders)
