[package]
name = "bird_hordes"
version = "0.1.0"
edition = "2018"

[dependencies]
# arcana = { path = "../arcana" }
arcana = { git = "https://github.com/TrinaglesDrawers/arcana.git" }
# color-eyre = "0.5"
# hecs = "0.5"
rapier3d = "0.10.1"
eyre = "0.6"
# futures = "0.3"
rand = "0.8"
pathfinding = { version = "2.2.1" }
approx = "0.5.0"
flume = "0.10.8"
float-ord = "0.3.2"
sdl2 = "0.34.5"
